# reflex-examples

./: .gitignore  .pre-commit-config.yaml  README.md  gitignore  requirements.txt  rxconfig.py
.trunk/: trunk.yaml
ag_grid_finance/: requirements.txt  rxconfig.py
ai-personal-page/: requirements.txt  rxconfig.py
app/: app.py  gemini.py
azure-auth/: requirements.txt
azure_auth/: requirements.txt  rxconfig.py
basic_crud/: requirements.txt  rxconfig.py
chat_app_v2/: .gitignore  README.md  rxconfig.py
chat_v2/: .gitignore  requirements.txt  rxconfig.py
chatroom/: .gitignore  README.md  pcconfig.py  requirements.txt  rxconfig.py
clock/: .gitignore  pcconfig.py  requirements.txt  rxconfig.py
clock_radix/: requirements.txt  rxconfig.py
collaborative-counter/: .gitignore  README.md  pcconfig.py  rxconfig.py
counter/: pcconfig.py  requirements-dev.txt  requirements.txt  rxconfig.py
crm/: .gitignore  README.md  pcconfig.py  requirements.txt  rxconfig.py
customer_data_app/: requirements.txt  rxconfig.py
dalle/: pcconfig.py  requirements.txt
dashboard/: requirements.txt  rxconfig.py
data_visualisation/: .gitignore  requirements.txt  rxconfig.py
portfolio/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  rxconfig.py
portfolio/portfolio/: portfolio.py
portfolio/portfolio/components/: contact.py  footer.py  hero.py  navbar.py  projects.py  skills.py
portfolio/portfolio/styles/: styles.py  theme.py
translator/: .gitignore  pcconfig.py  pyproject.toml  requirements.txt  rxconfig.py
translator/translator/: langs.py  translator.py
(+472 files in other folders)
