[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio"
version = "0.1.0"
description = "A personal portfolio website built with Reflex"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "reflex>=0.3.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py38"
